[metadata]
name = latex_utils-TheRaphael0000
version = 0.0.1
author = TheRaphael0000
author_email = raphael.margueron@gmail.com
description = Latex utils
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/TheRaphael0000/latex_utils
classifiers =
    Programming Language :: Python :: 3
    License :: GNU GENERAL PUBLIC LICENSE
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    jinja2>=2.10.1

[options.packages.find]
where = src
